// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DetailInfo Component Should match snapshots 1`] = `
<DocumentFragment>
  <p
    data-testid="antd-mock-Modal-title"
  >
    任务详情
  </p>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      系统异常
    </div>
  </div>
  <button
    data-testid="antd-mock-Modal-confirm"
  >
    confirm
  </button>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 1`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务名称：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务类型：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                spark
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                数据源
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                dataName(1)
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                引擎版本：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                1.12
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                创建时间：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                2022-01-01 08:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                修改时间：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                2022-01-01 08:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                描述：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                test
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 2`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                函数名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <code>
                  test
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                类名
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                className
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                SQL
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                sqlText
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                用途
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                purpose
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                命令格式
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <code>
                  commandFormate
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                参数说明
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                paramDesc
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                创建
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                2022-01-01 08:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                最后修改
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                2022-01-01 08:00:00
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 3`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                资源名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                资源描述
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                resourceDesc
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                存储路径
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <code
                  class="cursor-pointer"
                >
                  url
                </code>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                创建
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                userName 于2022-01-01 08:00:00
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                修改时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                2022-01-01 08:00:00
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 4`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                名称
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                mysql_test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                类型
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                MySQL
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                描述
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                --
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                连接信息
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <div>
                  <p
                    style="display: flex; line-height: 1.5; margin-bottom: 0px;"
                  >
                    <span
                      style="color: rgb(153, 153, 153); flex-shrink: 0;"
                    >
                      jdbcUrl：
                    </span>
                    <span
                      class="link-json"
                      title="jdbc:mysql://"
                    >
                      jdbc:mysql://
                    </span>
                  </p>
                  <p
                    style="display: flex; line-height: 1.5; margin-bottom: 0px;"
                  >
                    <span
                      style="color: rgb(153, 153, 153); flex-shrink: 0;"
                    >
                      用户名：
                    </span>
                    <span
                      class="link-json"
                      title="dtstack"
                    >
                      dtstack
                    </span>
                  </p>
                </div>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                连接状态
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-success"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    正常
                  </span>
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                修改时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                2022-11-02 11:00:42
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test DetailInfo Component Test DetailInfo Component Should match snapshots 5`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered dt-taskinfo"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务名称：
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                test
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                实例ID
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <span
                  class="cursor-pointer"
                >
                  jobId
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                任务类型
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                spark
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                状态
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <span>
                  <div
                    class="dtc-circle-default dtc-circle-fail"
                  />
                    数据同步
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                调度周期
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                <span>
                  分钟任务
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              <span>
                计划时间
              </span>
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              <span>
                1667358042000
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
